v26.04/de/_sources/detection_modules.rst.txt
Detektions- und Messmodule

Der

rc_visard NG

 bietet Softwaremodule für unterschiedliche Detektions- und
Messanwendungen:

Measure (rc_measure, Abschnitt \ref{measure:sect-measure})  ermöglicht
die Messung von Tiefenwerten

LoadCarrier (rc_load_carrier, Abschnitt \ref{loadcarrier:sect-
loadcarrier})  ermöglicht die Erkennung von Load Carriern (Behältern)
und ihres Füllstands.

TagDetect (rc_april_tag_detect und rc_qr_code_detect, Abschnitt
\ref{tagdetect:sect-tag-detection})  ermöglicht die Erkennung von
AprilTags und QR-Codes sowie die Schätzung von deren Pose.

ItemPick (rc_itempick, Abschnitt \ref{itempick:sect-itempick})  bietet
eine Standardlösung für robotische Pick-and-Place-Anwendungen für
oder unbekannte Objekte.

BoxPick (rc_boxpick, Abschnitt \ref{boxpick:sect-boxpick})  bietet
eine Standardlösung für robotische Pick-and-Place-Anwendungen für
Boxen oder texturierte Boxen.

SilhouetteMatch (rc_silhouettematch, Abschnitt \ref{silhouettematch
:sect-silhouettematch})  bietet eine Objekterkennungslösung für
Objekte, die sich auf einer Ebene befinden, oder gestapelte planare
Objekt.

CADMatch (rc_cadmatch, Abschnitt \ref{cadmatch:sect-cadmatch})  bietet
eine Objekterkennungslösung für 3D-Objekte.

Diese Module sind optional und können durch Kauf einer separaten

Lizenz

 aktiviert werden.

